Make compatible with JDK 8